--- a/software.html
+++ b/software.html
@@ -39,6 +39,38 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTg6afw9&__jvst=Employee+Referral&__jvsd=sPcqIhwV&__jvsc=Twitter&bid=nrb2oMwj'>NICE inContact Careers - Software Engineer II</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEk0oMwD'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
+<p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ox1mafwO&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ntI0oMwQ'>ServiceNow Careers - Software Architect (Distinguished Software Engineer) ? UI</a></h5> 
+<p><span class="badge badge-light">San Diego, California  San Diego</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999698522170-software-engineer-iii'>Nextech Software Engineer III | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Tampa, FL Tampa, FL</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698521909-internship-software-engineer-sf'>Optimizely Internship - Software Engineer - SF | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698522202-internship-software-engineer-austin'>Optimizely Internship - Software Engineer - Austin | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Austin Austin  Austin, TX</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523778-software-engineer-data-infrastructure'>Bosch Group Software Engineer, Data Infrastructure | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Sunnyvale, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523809-senior-software-engineer-data-infrastructure'>Bosch Group Senior Software Engineer, Data Infrastructure | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Sunnyvale, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=nPpWoMwP'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -55,7 +87,7 @@
 <p><span class="badge badge-light">Redmond, WAUnited States  Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/senior-software-engineer-dvLHss-Yqr6zmuaKjNoogA'>Senior Software Engineer #1200 job at Sojern in San Francisco, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/senior-software-engineer-dvLHss-Yqr6zmuaKjNoogA'>Senior Software Engineer #1200 job at Sojern in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -107,7 +139,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ringcentral/job/ovXrbfwO'>RingCentral Careers - Ruby / Ruby on Rails Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/ovXrbfwO'>RingCentral Careers - Ruby / Ruby on Rails Software Engineer</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -115,7 +147,7 @@
 <p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -229,7 +261,7 @@
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://quaero.applytojob.com/apply/tGdI3ISoQv/Software-Engineer-Big-Data'>Software Engineer- Big Data - Quaero - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://quaero.applytojob.com/apply/tGdI3ISoQv/Software-Engineer-Big-Data'>Software Engineer- Big Data - Quaero - Career Page</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -281,7 +313,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1935512'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1935512'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -321,7 +353,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472121-software-engineer-android'>SmartRecruiters Inc Software Engineer, Android | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472121-software-engineer-android'>SmartRecruiters Inc Software Engineer, Android | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -347,7 +379,7 @@
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/algolia/141fc40b-9125-44fe-875f-71d473815354'>Algolia - Software Engineer - Android</a></h5> 
+<h5><a href='https://jobs.lever.co/algolia/141fc40b-9125-44fe-875f-71d473815354'>Algolia - Software Engineer - Android</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -367,7 +399,7 @@
 <p><span class="badge badge-light">Redwood City, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4491111002'>Job Application for Software Engineer at Anaplan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4491111002'>Job Application for Software Engineer at Anaplan</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -401,48 +433,16 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5428'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5428'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/automationanywhere/job/oqR49fwe'>Automation Anywhere Careers - Principal Software Engineer</a></h5> 
-<p><span class="badge badge-light">San Jose, California</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698457614-software-engineer-coverage-team'>Omio Software Engineer - Coverage Team | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698456640-senior-software-engineer-coverage'>Omio Senior Software Engineer - Coverage | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.php-resource.de/jobs/job,45566,Software-Engineer-mwd-Automotive.htm'>Software Engineer (m/w/d) Automotive Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/senior-software-engineer-70168'>Senior Software Engineer - Medtronic Careers</a></h5> 
-<p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
